# arduino-libilbc

./: CMakeLists.txt  README.md  library.properties
src/: iLBC.h
src/ilbc_src/: LPCencode.c  StateConstructW.c  StateSearchW.c  doCPLC.c  enhancer.c  getCBvec.c  iCBSearch.c  iLBC_decode.c  iLBC_define.h  iLBC_encode.c  iLBC_test.c
